Fix modal overflow

--- a/frontend/src/components/Shared/Modal/styles.module.css
+++ b/frontend/src/components/Shared/Modal/styles.module.css
@@ -1,11 +1,14 @@
 .modal {
   padding: 0;
-  overflow: hidden;
 }
 .header {
   padding: 1.2rem 2.4rem;
   background-color: var(--color-primary-6);
+  margin-right: 0;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
+
 .title {
   text-transform: uppercase;
   font-size: 1.6rem;
